<resources>
    <string name="app_name">PMP3 Player</string>
    <string name="info">- Open player in playlist \nRun a song and slide left. Slide right to come back \n- Delete song \nUse long click on song, choose songs for deleting, press button \n- Encrypt and decrypt songs on computer \nLater \n- Add songs to app by myself \nAdd songs in a folder \"privatemp3player\" and press button \"Update\" in app bar. Please, don\'t add songs that was encrypted by other keyword</string>
    <string name="info_title">How to:</string>
    <string name="keyword_inf">Choose a keyword for encription of songs</string>
    <string name="keyword_choose1">Just name and format encription</string>
    <string name="keyword_choose2">All file encription</string>
    <string name="next">Next</string>
    <string name="btn_info">Info</string>
    <string name="btn_load_songs">Load songs</string>
    <string name="btn_security">Security</string>
    <string name="btn_change_pin">Change Pin</string>
    <string name="btn_change_keyword">Change Keyword</string>
    <string name="btn_decrypt_all_songs">Decrypt all songs</string>
    <string name="title_create_a_pin">Create a PIN</string>
    <string name="your_pain_info">You destroyed all what you had.  Now live with it</string>
    <string name="btn_load">What I have done… (Load new)</string>
    <string name="btn_exit">Ok (Exit)</string>
    <string name="search">Search</string>
    <string name="update_playlist">Update playlist</string>
    <string name="settings">Settings</string>
    <string name="instruct_0_length">Keyword can\'t be 0 length</string>
    <string name="instruct_no_changes">Nothing to change</string>
    <string name="relax">There is  no file for working. Just relax.</string>
    <string name="cobvering_info">Files converted:</string>
    <string name="done_info">\nDone!</string>
    <string name="converting_no_files">No files for converting</string>
    <string name="decrypting_no_files">No files for decrypting</string>
    <string name="decrypting_files">Files decrypted:</string>
    <string name="decrypting_done">\nDone! All files in external storage in dir:</string>
    <string name="write_you_pin">Write your pin</string>
    <string name="write_new_pin">Write new pin</string>
    <string name="write_pin_again">Write your pin again</string>
    <string name="wrong_pin_with_repeat">Wrong pin. Try create again.</string>
    <string name="wrong_pin">Wrong pin</string>
    <string name="ask_decrypting">All songs will be decrypted and saved in the same directory. Encrypted songs will be deleted. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_go_explorer">There is no music. Do you want to load mp3 files now?</string>
    <string name="empty">So empty…</string>
    <string name="ask_deleting">Are you sure that you want delete this songs?</string>
    <string name="permission_info">You can\'t go next without applied permissions.</string>
    <string name="permission_call_info">P.s. Read calls need tostop music on call</string>
    <string name="ask_logs">Ask Logs</string>
    <string name="empty_delete_list">Nothing to delete</string>
    <string name="empty_error_files">No files with errors</string>
</resources>
