<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preference.SecurityPrefActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnChangePin"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:onClick="onClick"
        android:text="@string/btn_change_pin"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeKeyword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChangeKeyword"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:onClick="onClick"
        android:text="@string/btn_change_keyword"
        app:layout_constraintBottom_toTopOf="@+id/btnDecryptAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePin" />

    <Button
        android:id="@+id/btnDecryptAll"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:onClick="onClick"
        android:text="@string/btn_decrypt_all_songs"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeKeyword" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/spy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDecryptAll"
        tools:ignore="ContentDescription" />
</android.support.constraint.ConstraintLayout>